--- a/app/scss/layout/_calculator.scss
+++ b/app/scss/layout/_calculator.scss
@@ -191,6 +191,100 @@
     }
 }
 
+.calculator-goods {
+    padding-bottom: 108px;
+    position: relative;
+
+    &::before {
+        content: url(../image/bg-vector-orange.svg);
+        position: absolute;
+        top: 296px;
+        right: 0;
+        width: 49%;
+    }
+
+    &__title {
+        font-size: $font-size-h2;
+        line-height: $line-height-h2;
+        font-weight: 900;
+        margin: 6px 0 27px;
+    }
+
+    &__img {
+        width: 100%;
+        padding: 3px 22px 39px;
+    }
+
+    &__info {
+        padding: 70px 0 0 95px;
+
+        >p {
+            font-size: 26px;
+            line-height: 31px;
+        }
+    }
+
+    &__subtitle {
+        color: $text-color-white;
+        font-size: $font-size-h1;
+        line-height: $line-height-h1;
+        font-weight: 900;
+        margin-bottom: 50px;
+
+        >p {
+            font-size: $base-font-size;
+            line-height: $base-line-height;
+            font-weight: 300;
+            margin-bottom: 6px;
+        }
+    }
+
+    &__list-info {
+        margin: 28px 0 77px;
+
+        li {
+            display: flex;
+            margin-bottom: 14px;
+
+            &:nth-of-type(2) {
+                margin-bottom: 36px;
+            }
+
+            .line {
+                flex: auto;
+                margin: 0 8px 4px;
+                border-bottom: 1px solid $border-table;
+            }
+        }
+    }
+
+    &__form {
+        .btn-red {
+            width: 100%;
+            margin: 20px 0 30px;
+        }
+
+        .group-checkobox {
+            justify-content: center;
+
+            >p {
+                font-size: 14px;
+                line-height: 17px;
+                color: $light-gray;
+
+                a {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    &__text {
+        margin: 54px 0 32px;
+        color: $text-gray;
+    }
+}
+
 @media only screen and (max-width: 1199.8px) {
     .calculator {
 
@@ -236,6 +330,49 @@
                     margin: 0 auto 18px;
                 }
             }
+        }
+    }
+
+    .calculator-goods {
+        padding-bottom: 76px;
+
+        &::before {
+            top: 210px;
+            width: 50%;
+        }
+
+        &__title {
+            font-size: $font-size-h2 - 6px;
+            line-height: $line-height-h2 - 6px;
+            margin: 4px 0 10px;
+        }
+
+        &__img {
+            padding: 0 14px 24px;
+        }
+
+        &__info {
+            padding: 50px 0 0;
+
+            >p {
+                font-size: 22px;
+                line-height: 28px;
+            }
+        }
+
+        &__subtitle {
+            padding-left: 60px;
+            font-size: $font-size-h2;
+            line-height: $line-height-h2;
+
+            >p {
+                font-size: $base-font-size - 4px;
+                line-height: $base-line-height - 5px;
+            }
+        }
+
+        &__text {
+            margin: 24px 0 37px;
         }
     }
 }
@@ -324,6 +461,99 @@
             >li {
                 min-height: 34px;
                 padding: 8px 0;
+            }
+        }
+    }
+
+    .calculator-goods {
+
+        &::before {
+            top: 210px;
+            width: 50%;
+        }
+
+        &__title {
+            font-size: $font-size-h3;
+            line-height: $line-height-h3;
+        }
+
+        &__info {
+            padding: 60px 0 0;
+
+            >p {
+                font-size: $base-font-size;
+                line-height: $base-font-size;
+            }
+        }
+
+        &__subtitle {
+
+            >p {
+                display: flex;
+                align-items: center;
+
+                span {
+                    margin-left: 40px;
+                }
+            }
+        }
+
+        &__list-info {
+            margin: 20px 0 0;
+
+            li {
+                margin-bottom: 19px;
+
+                &:nth-of-type(2) {
+                    margin-bottom: 41px;
+                }
+            }
+        }
+
+        &__wrap {
+            position: relative;
+            padding-bottom: 180px;
+
+            .col-12 {
+                position: static;
+            }
+        }
+
+        &__form {
+            position: absolute;
+            bottom: 0;
+            left: 15px;
+            right: 15px;
+            background-color: $base-bg;
+            box-shadow: 0px 100px 100px rgba(0, 0, 0, 0.08);
+            padding: 28px 30px 25px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+
+            .btn-red {
+                width: 210px;
+                margin: 0;
+            }
+
+            .input-light {
+                width: 180px;
+                margin: 0 30px 0 0;
+            }
+
+            .group-checkobox {
+                margin-top: 16px;
+
+                >p {
+                    font-size: 12px;
+                    line-height: 14px;
+                }
+            }
+        }
+
+        &__text {
+            P {
+                padding-right: 32px;
             }
         }
     }
@@ -497,6 +727,97 @@
         }
 
     }
+
+    .calculator-goods {
+
+        &::before {
+            top: 170px;
+            width: 90%;
+        }
+
+        &__title {
+            font-size: $font-size-h3 - 4px;
+            margin: 0 0 20px;
+        }
+
+        &__info {
+            padding: 32px 0 0;
+        }
+
+        &__subtitle {
+            position: absolute;
+            top: 30px;
+            padding-left: 90px;
+
+            >p {
+                display: block;
+
+                span {
+                    margin-left: 0;
+                }
+            }
+        }
+
+        &__wrap {
+            position: relative;
+            padding-bottom: 0;
+            padding-top: 140px;
+        }
+
+        &__form {
+            position: static;
+            left: 0;
+            right: 0;
+            padding: 28px 30px 17px;
+            display: block;
+            margin-top: 61px;
+
+            .btn-red {
+                width: 100%;
+                margin-top: 10px;
+            }
+
+            .input-light {
+                width: 100%;
+                margin: 0 0 10px 0;
+            }
+
+            .group-checkobox {
+                justify-content: flex-start;
+                margin-top: 20px;
+            }
+        }
+
+        &__text {
+            margin: 26px 0 28px;
+
+            P {
+                padding-right: 0;
+                margin-bottom: 15px;
+            }
+        }
+
+        .table {
+            &__title {
+                padding-top: 10px;
+            }
+
+            &__col-1 {
+                padding-top: 36px;
+            }
+
+            &__row-mob {
+                >ul {
+                    li {
+                        min-height: 42px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 575.8px) {
@@ -538,6 +859,41 @@
         &__header {
             font-size: 12px;
             line-height: 14px;
+        }
+    }
+
+    .calculator-goods {
+
+        &::before {
+            display: none;
+        }
+
+        &__title {
+            font-size: $base-font-size;
+            line-height: $base-line-height;
+        }
+
+        &__subtitle {
+            position: absolute;
+            top: 30px;
+            padding-left: 40px;
+
+            >p {
+                display: block;
+
+                span {
+                    display: block;
+                }
+            }
+
+            &::before {
+                content: url(../image/bg-vector-orange.svg);
+                width: 105%;
+                position: absolute;
+                top: -24px;
+                right: -15px;
+                z-index: -1;
+            }
         }
     }
 }
