--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -358,6 +358,10 @@ body {
     line-height: 17px;
     color: $text-color-white;
 
+    &.color-darck {
+        color: $text-color;
+    }
+
     &__item {
         display: inline-block;
 
@@ -365,6 +369,12 @@ body {
             content: '/';
             color: $yellow;
             margin: 0 2px 0 6px;
+        }
+
+        &:last-of-type {
+            &::after {
+                display: none;
+            }
         }
 
         >span {
@@ -597,10 +607,6 @@ body {
         }
     }
 
-    .bread-crumbs {
-        display: none;
-    }
-
     .download-catalog {
         padding: 142px 0 95px;
 
@@ -703,6 +709,10 @@ body {
         article {
             padding: 26px 30px;
         }
+    }
+
+    .bread-crumbs {
+        padding: 29px 0 45px;
     }
 }
 
@@ -807,6 +817,11 @@ body {
         }
     }
 
+    .bread-crumbs {
+        font-size: 12px;
+        line-height: 14px;
+    }
+
 }
 
 @media only screen and (max-width: 767.8px) {
@@ -907,6 +922,10 @@ body {
         article {
             padding: 16px 20px;
         }
+    }
+
+    .bread-crumbs {
+        padding: 25px 0 34px;
     }
 
 }
