--- a/app/css/style.css
+++ b/app/css/style.css
@@ -643,9 +643,9 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .slider-reviews { width: calc(100% + 30px); margin-left: -15px; }
 
-.slider-reviews.slick-slider .slick-track { padding-bottom: 183px; }
+.slider-reviews.slick-slider .slick-track { padding-bottom: 183px; min-width: 100%; display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
-.slider-reviews__item { max-width: 33.3%; margin: 0 15px; display: inline-block !important; }
+.slider-reviews__item { min-width: 250px; max-width: 33.3%; margin: 0 15px; -webkit-flex: auto; -ms-flex: auto; flex: auto; }
 
 .slider-reviews .slider-dark__arrows { top: -130px; }
 
@@ -714,7 +714,8 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .promotions__title { font-size: 24px; line-height: 29px; margin-bottom: 32px; }
   .slider-promotions { margin-bottom: 110px; }
   .slider-promotions .slider-dark__arrows { top: -60px; }
-  .reviews__tab .tab-nav { top: -16px; }
+  .reviews__tab { padding-top: 16px; }
+  .reviews__tab .tab-nav { top: 0; }
   .reviews__header .icon-social { left: 38px; top: 38px; width: 25px; }
   .reviews__title > h4 { font-size: 18px; line-height: 22px; }
   .reviews__title > p { width: 100%; }
