--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./layout/calendar";
 @import "./layout/roletta";
 @import "./layout/calculator";
+@import "./layout/assortement";
 
 @import "./layout/promotion";
 
